# ratatui-interact

./: .gitignore  Cargo.toml  record-demos.sh
.github/workflows/: ci.yml
demos/: accordion.tape  animated_text.tape  breadcrumb.tape  button.tape  checkbox.tape  context_menu.tape  copyable_pane.tape  dialog.tape  diff_viewer.tape  display.tape  explorer_log.tape  hotkey_dialog.tape  hotkey_footer.tape  input.tape  marquee.tape  menu_bar.tape  mouse_pointer.tape  navigation.tape  select.tape  settings.tape  spinner.tape  split_pane.tape  status_line.tape  tab_view.tape  textarea.tape
docs/: trait-audit.md
examples/: context_menu_demo.rs  copyable_pane_demo.rs  dialog_demo.rs  diff_viewer_demo.rs  hotkey_dialog_demo.rs  hotkey_footer_demo.rs  menu_bar_demo.rs  mouse_pointer_demo.rs  navigation_demo.rs  spinner_demo.rs  split_pane_demo.rs  status_line_demo.rs  textarea_demo.rs
src/: lib.rs
src/components/: animated_text.rs  container.rs  context_menu.rs  diff_viewer.rs  hotkey_footer.rs  log_viewer.rs  menu_bar.rs  mod.rs  mouse_pointer.rs  search_state.rs  spinner.rs  split_pane.rs  status_line.rs  textarea.rs
src/components/hotkey_dialog/: handlers.rs  mod.rs  state.rs  style.rs  widget.rs
src/traits/: focusable.rs
src/utils/: clipboard.rs  mod.rs  view_copy.rs
