[package]
name = "ratatui-interact"
version = "0.4.1"
edition = "2024"
rust-version = "1.86"
description = "Interactive TUI components for ratatui with focus management and mouse support"
license = "MIT"
authors = ["Brainwires Team"]
keywords = ["tui", "ratatui", "widgets", "focus", "mouse"]
categories = ["command-line-interface", "gui"]
repository = "https://github.com/Brainwires/ratatui-interact"
homepage = "https://github.com/Brainwires/ratatui-interact"
documentation = "https://docs.rs/ratatui-interact"
readme = "README.md"

[dependencies]
# TUI framework
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"

# Error handling
thiserror = "2.0"

# Text processing
regex = "1.12"
unicode-width = "0.2"

# Optional: Markdown rendering
termimad = { version = "0.34", optional = true }

# Optional: Clipboard support
arboard = { version = "3.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
# Enable markdown rendering in ANSI parser
markdown = ["dep:termimad"]
# Enable filesystem operations in file explorer
filesystem = []
# Enable clipboard copy/paste support
clipboard = ["dep:arboard"]

[[example]]
name = "explorer_log_demo"
required-features = ["filesystem"]

[[example]]
name = "copyable_pane_demo"
